Race the OAuth refresh tests on platform threads, not virtual